--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Broperti Header Real Estate Recreation</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -53,8 +53,15 @@
             </section>
           </section>
         </section>
+        <footer class="nav footer">
+          <a
+            href="https://dribbble.com/shots/14628251-Broperti-Header-Real-Estate"
+            >Recreation of BuildWith Angga's design - original found here</a
+          >
+        </footer>
       </div>
     </header>
+
     <script src="" async defer></script>
   </body>
 </html>
