fixed media queries on smaller devices

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             </section>
           </section>
         </section>
-        <footer class="nav footer">
+        <footer class="footer">
           <a
+            class="a--footer"
             href="https://dribbble.com/shots/14628251-Broperti-Header-Real-Estate"
             >Recreation of BuildWith Angga's design - original found here</a
           >
